--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
     "jsonfile": "^3.0.1"
+  },
+  "scripts": {
+    "start": "nodemon src/server.js"
   }
 }
