--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
-    "jsonfile": "^3.0.1"
+    "jsonfile": "^3.0.1",
+    "rethinkdb": "^2.3.3"
   },
   "scripts": {
     "start": "nodemon src/server.js"
