--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
     "jsonfile": "^3.0.1",
-    "rethinkdb": "^2.3.3"
+    "rethinkdb": "^2.3.3",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "nodemon src/server.js"
