--- a/package.json
+++ b/package.json
@@ -5,10 +5,23 @@
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
     "jsonfile": "^3.0.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "rethinkdb": "^2.3.3",
     "url": "^0.11.0"
   },
   "scripts": {
     "start": "nodemon src/server.js"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "json-loader": "^0.5.7",
+    "webpack": "^3.4.1"
   }
 }
