Add node-externals plugin and new start script

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     },
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": false,
+            "jsx": true,
         },
         "sourceType": "module"
     },
