csp in progress

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
+    "helmet-csp": "^2.5.1",
     "jsonfile": "^3.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
