--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "feedparser-promised": "^1.3.0",
     "helmet-csp": "^2.5.1",
     "jsonfile": "^3.0.1",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "rethinkdb": "^2.3.3",
