--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "helmet-csp": "^2.5.1",
     "jsonfile": "^3.0.1",
     "moment": "^2.18.1",
+    "normalize.css": "^7.0.0",
+    "postcss-cssnext": "^3.0.2",
     "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -28,6 +30,9 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "json-loader": "^0.5.7",
     "npm-run-all": "^4.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
     "webpack-node-externals": "^1.6.0"
   }
