--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm-run-all": "^4.0.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
+    "postcss-short": "^4.1.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
     "webpack-node-externals": "^1.6.0"
