--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "json-loader": "^0.5.7",
     "npm-run-all": "^4.0.2",
+    "postcss-font-magician": "^2.0.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "postcss-short": "^4.1.0",
