--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "^0.11.0"
   },
   "scripts": {
+    "prepare": "patch-package",
     "start": "npm-run-all --parallel watch:server watch:build",
     "watch:build": "webpack --watch",
     "watch:server": "nodemon \"./dist/server.js\" --watch \"./dist\""
@@ -27,10 +28,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "eslint-config-airbnb": "^15.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "json-loader": "^0.5.7",
     "npm-run-all": "^4.0.2",
-    "postcss-font-magician": "https://github.com/sms-system/postcss-font-magician/archive/master.tar.gz",
+    "patch-package": "^3.3.1",
+    "postcss-font-magician": "^2.0.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "postcss-short": "^4.1.0",
