--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-feather": "^1.0.6",
     "rethinkdb": "^2.3.3",
     "url": "^0.11.0"
   },
