--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "currency-formatter": "^1.2.1",
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
     "helmet-csp": "^2.5.1",
@@ -12,10 +13,12 @@
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
     "react": "^15.6.1",
+    "react-cryptocoins": "^1.0.2",
     "react-dom": "^15.6.1",
     "react-feather": "^1.0.6",
     "rethinkdb": "^2.3.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "url-parse": "^1.1.9"
   },
   "scripts": {
     "prepare": "patch-package",
