--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "feedparser-promised": "^1.3.0",
     "helmet-csp": "^2.5.1",
     "jsonfile": "^3.0.1",
+    "lost": "^8.2.0",
     "moment": "^2.18.1",
     "normalize.css": "^7.0.0",
     "postcss-cssnext": "^3.0.2",
