--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "currency-formatter": "^1.2.1",
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
