--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.6.1",
     "react-feather": "^1.0.6",
     "rethinkdb": "^2.3.3",
+    "socket.io": "^2.0.3",
     "url": "^0.11.0",
     "url-parse": "^1.1.9"
   },
