--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-feather": "^1.0.6",
     "rethinkdb": "^2.3.3",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "url": "^0.11.0",
     "url-parse": "^1.1.9"
   },
