--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "morning-serial",
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
@@ -7,8 +8,6 @@
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
     "helmet-csp": "^2.5.1",
-    "jsonfile": "^3.0.1",
-    "lost": "^8.2.0",
     "moment": "^2.18.1",
     "normalize.css": "^7.0.0",
     "postcss-cssnext": "^3.0.2",
@@ -21,12 +20,11 @@
     "rethinkdb": "^2.3.3",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
-    "url": "^0.11.0",
     "url-parse": "^1.1.9"
   },
   "scripts": {
-    "prepare": "patch-package",
     "start": "npm-run-all --parallel watch:server watch:build",
+    "build": "NODE_ENV=production webpack",
     "watch:build": "webpack --watch",
     "watch:server": "nodemon \"./dist/server.js\" --watch \"./dist\""
   },
@@ -37,12 +35,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "eslint": "^4.4.1",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.2.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fbjs": "^0.8.14",
     "json-loader": "^0.5.7",
     "npm-run-all": "^4.0.2",
-    "patch-package": "^3.3.1",
-    "postcss-font-magician": "^2.0.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "postcss-short": "^4.1.0",
