--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
     "helmet-csp": "^2.5.1",
+    "mime": "^1.3.6",
+    "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "normalize.css": "^7.0.0",
     "postcss-cssnext": "^3.0.2",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
     "react": "^15.6.1",
-    "react-cryptocoins": "^1.0.2",
     "react-dom": "^15.6.1",
     "react-feather": "^1.0.6",
+    "react-moment": "^0.6.2",
     "rethinkdb": "^2.3.3",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
