Add npm run scripts for dling favicon and updating db

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "scripts": {
     "start": "npm-run-all --parallel watch:server watch:build",
     "build": "NODE_ENV=production webpack",
+    "feed-db": "./scripts/feed-worker.js",
+    "dl-favicons": "./scripts/dl-favicons.js",
     "watch:build": "webpack --watch",
     "watch:server": "nodemon \"./dist/server.js\" --watch \"./dist\""
   },
