--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,14 @@
         "global-require": 0,
         "react/jsx-filename-extension": 0,
         "arrow-parens": 0,
-        "no-use-before-define": 0
+        "no-use-before-define": 0,
+        "comma-dangle": ["error", {
+                "functions": "ignore",
+                "objects": "always-multiline",
+                "exports": "always-multiline",
+                "imports": "always-multiline",
+                "arrays": "always-multiline"
+            }
+        ]
     }
 }
