--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mime": "^1.3.6",
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "normalize.css": "^7.0.0",
     "postcss-cssnext": "^3.0.2",
     "prop-types": "^15.5.10",
@@ -28,8 +29,7 @@
   "scripts": {
     "start": "npm-run-all --parallel watch:server watch:build",
     "build": "NODE_ENV=production webpack",
-    "feed-db": "./scripts/feed-worker.js",
-    "dl-favicons": "./scripts/dl-favicons.js",
+    "favicons": "./scripts/dl-favicons.js",
     "watch:build": "webpack --watch",
     "watch:server": "nodemon \"./dist/server.js\" --watch \"./dist\""
   },
