--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.15.3",
     "feedparser-promised": "^1.3.0",
     "helmet-csp": "^2.5.1",
+    "html-entities": "^1.2.1",
     "mime": "^1.3.6",
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
