Pipe a stream to response instead of calling synchronous renderToString()

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-cssnext": "^3.0.2",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
+    "rapscallion": "^2.1.13",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-feather": "^1.0.6",
